--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,12 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<script type="module">
+			// It loads a polyfill for anchor positioning if the browser doesn't support it.
+			if (!("anchorName" in document.documentElement.style)) {
+			  import("https://unpkg.com/@oddbird/css-anchor-positioning");
+			}
+		  </script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
